osd: take heartbeat_lock before checking for session

When we open a connection, there is a short window before we attach
the session.  If a fault happens quickly, we won't get the reset, and
will persistently fail to send osd pings.

Move the lock up to avoid this.  Note that we should rarely really see
connections without sessions here anyway (except when this specific
race happens), so this should have no negative impact (by taking the lock
when we weren't before).

Fixes: http://tracker.ceph.com/issues/36602
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 51d8e2457d73c709bfa4f706793696b3ce704ff9)

Conflicts:
	src/osd/OSD.cc
- use Mutex::Locker instead of std::lock_guard (latter is a C++17ism)